nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
