nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: nginx.eleks.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-nodeport
          servicePort: 80
